using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationTags
{
    public const string MOVEMENT = "Movement";
    public const string PUNCH = "Punch";
    public const string PUNCH2 = "Punch 2";
    public const string PUNCH3 = "Punch 3";
    
    public const string KICK1 = "Kick 1";
    public const string KICK2 = "Kick 2";
    //public const string KICK3 = "Kick 3";

    public const string IDLE = "Idle";

    public const string ATTACK1 = "Attack1";
    public const string ATTACK2 = "Attack2";
    public const string ATTACK3 = "Attack3";

    public const string KNOCKDOWN = "KnockDown";
    public const string STANDUP = "StandUp";
    public const string HIT = "Hit";
    public const string DEATH = "Death";
}
public class Tags
{
    public const string GROUND = "Ground";
    public const string PLAYER = "Player";
    public const string ENEMY = "Enemy";
    public const string HEALTH = "Health UI";

    public const string UNTAGGED = "Untagged";
    public const string LEFTARM = "LeftArm";
    public const string RIGHTLEG = "RightLeg";
}

